--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/*.html",
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "predeploy": "rm -rf dist && parcel build index.html --public-url /portfolio-2.0",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
